b=506470, Mac alerts service should not initialize Growl on app startup; r=sdwilsh